k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: backend-deployment
   labels:
      app: backend
spec:
   replicas: 3
   selector:
      matchLabels:
         app: backend
   template:
      metadata:
         labels:
            app: backend
      spec:
         containers:
            - name: backend-one
              image: shafikur/backend-one:2.0
              ports:
                 - containerPort: 80
